// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList tests on web does not render good quality images if the item is quickly scrolled passed 1`] = `
Array [
  <img
    alt=""
    src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1b5afe88-cb0d-11e7-9ee9-e45ae7e1cdd4.jpg?crop=4252%2C2835%2C0%2C0&resize=100"
    style="display: block; width: 100%; z-index: 1; position: absolute;"
  />,
  <img
    alt=""
    src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd1fe3000-cb0e-11e7-9ee9-e45ae7e1cdd4.jpg?crop=2887%2C1925%2C562%2C745&resize=660"
    style="display: block; width: 100%; z-index: 1; position: absolute;"
  />,
  <img
    alt=""
    src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F459f7782-c950-11e7-9ee9-e45ae7e1cdd4.jpg?crop=5448%2C3632%2C0%2C0&resize=660"
    style="display: block; width: 100%; z-index: 1; position: absolute;"
  />,
  <img
    alt=""
    src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F06c0e50a-c667-11e7-9914-a38dcc178fcd.jpg?crop=3600%2C2400%2C0%2C0&resize=660"
    style="display: block; width: 100%; z-index: 1; position: absolute;"
  />,
  <img
    alt=""
    src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1d663086-c625-11e7-9914-a38dcc178fcd.jpg?crop=907%2C605%2C87%2C93&resize=660"
    style="display: block; width: 100%; z-index: 1; position: absolute;"
  />,
]
`;

exports[`AuthorList tests on web renders a good quality image if it is visible 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
>
  <div
    style="height: 0px; overflow: hidden; padding-bottom: 66.66666666666667%; display: table;"
  >
    <img
      alt=""
      src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1b5afe88-cb0d-11e7-9ee9-e45ae7e1cdd4.jpg?crop=4252%2C2835%2C0%2C0&resize=660"
      style="display: block; width: 100%; z-index: 1; position: absolute;"
    />
    <div
      class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-bottom-1p0dtai rn-boxSizing-deolkf rn-display-6koalj rn-flex-13awgt0 rn-flexGrow-1m1wadx rn-flexShrink-1awmn5t rn-flexDirection-eqz5dr rn-left-1d2f490 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-u8s1d rn-right-zchlnj rn-top-ipm5af rn-zIndex-1lgpqti"
    >
      <div
        class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flex-13awgt0 rn-flexGrow-1m1wadx rn-flexShrink-1awmn5t rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
      />
    </div>
  </div>
</div>
`;

exports[`AuthorList tests on web renders a poor quality image if it is not visible 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
>
  <div
    style="height: 0px; overflow: hidden; padding-bottom: 66.66666666666667%; display: table;"
  >
    <img
      alt=""
      src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd1fe3000-cb0e-11e7-9ee9-e45ae7e1cdd4.jpg?crop=2887%2C1925%2C562%2C745&resize=100"
      style="display: block; width: 100%; z-index: 1; position: absolute;"
    />
    <div
      class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-bottom-1p0dtai rn-boxSizing-deolkf rn-display-6koalj rn-flex-13awgt0 rn-flexGrow-1m1wadx rn-flexShrink-1awmn5t rn-flexDirection-eqz5dr rn-left-1d2f490 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-u8s1d rn-right-zchlnj rn-top-ipm5af rn-zIndex-1lgpqti"
    >
      <div
        class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flex-13awgt0 rn-flexGrow-1m1wadx rn-flexShrink-1awmn5t rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
      />
    </div>
  </div>
</div>
`;

exports[`AuthorList tests on web renders good quality images if there is no IntersectionObserver 1`] = `
Array [
  <TimesImage
    aspectRatio={1.5}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1b5afe88-cb0d-11e7-9ee9-e45ae7e1cdd4.jpg?crop=4252%2C2835%2C0%2C0&resize=660"
  >
    <View>
      <div>
        <div
          style={
            Object {
              "display": "table",
              "height": 0,
              "overflow": "hidden",
              "paddingBottom": "66.66666666666667%",
            }
          }
        >
          <img
            alt=""
            src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1b5afe88-cb0d-11e7-9ee9-e45ae7e1cdd4.jpg?crop=4252%2C2835%2C0%2C0&resize=660"
            style={
              Object {
                "display": "block",
                "position": "absolute",
                "width": "100%",
                "zIndex": 1,
              }
            }
          />
          <Placeholder
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "bottom": 0,
                  "flex": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "zIndex": 0,
                }
              }
            >
              <div>
                <Gradient
                  degrees={264}
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        "flex": 1,
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        }
                      }
                    />
                  </View>
                </Gradient>
              </div>
            </View>
          </Placeholder>
        </div>
      </div>
    </View>
  </TimesImage>,
  <TimesImage
    aspectRatio={1.5}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd1fe3000-cb0e-11e7-9ee9-e45ae7e1cdd4.jpg?crop=2887%2C1925%2C562%2C745&resize=660"
  >
    <View>
      <div>
        <div
          style={
            Object {
              "display": "table",
              "height": 0,
              "overflow": "hidden",
              "paddingBottom": "66.66666666666667%",
            }
          }
        >
          <img
            alt=""
            src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd1fe3000-cb0e-11e7-9ee9-e45ae7e1cdd4.jpg?crop=2887%2C1925%2C562%2C745&resize=660"
            style={
              Object {
                "display": "block",
                "position": "absolute",
                "width": "100%",
                "zIndex": 1,
              }
            }
          />
          <Placeholder
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "bottom": 0,
                  "flex": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "zIndex": 0,
                }
              }
            >
              <div>
                <Gradient
                  degrees={264}
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        "flex": 1,
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        }
                      }
                    />
                  </View>
                </Gradient>
              </div>
            </View>
          </Placeholder>
        </div>
      </div>
    </View>
  </TimesImage>,
]
`;

exports[`AuthorList tests on web renders page error 1`] = `
<AuthorProfileListError
  refetch={[Function]}
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flexBasis": "50%",
        "maxWidth": 548,
      }
    }
  >
    <div>
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "#1D1D1B",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 35,
            "marginBottom": "10px",
            "marginTop": "20px",
            "textAlign": "center",
          }
        }
      >
        <div
          dir="auto"
        >
          Something's gone wrong
        </div>
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 18,
            "textAlign": "center",
          }
        }
      >
        <div
          dir="auto"
        >
          We can't load the page you have requested. Please check your network connection and retry to continue
        </div>
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "maxWidth": 300,
            "paddingBottom": "10px",
            "paddingTop": "40px",
            "width": 200,
          }
        }
      >
        <div>
          <TouchableOpacity
            accessibilityLabel="Retry"
            accessible={true}
            activeOpacity={0.2}
            focusedOpacity={0.7}
            onPress={[Function]}
          >
            <View
              accessibilityLabel="Retry"
              accessible={true}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "touchAction": "manipulate",
                  "transitionDuration": "0.15s",
                  "transitionProperty": "opacity",
                  "userSelect": "none",
                }
              }
            >
              <div
                aria-label="Retry"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                tabIndex="0"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#006699",
                      "flex": 1,
                      "height": 44,
                      "justifyContent": "center",
                    }
                  }
                >
                  <div>
                    <Text
                      style={
                        Object {
                          "color": "#FFF",
                          "fontFamily": "GillSansMTStd-Medium",
                        }
                      }
                    >
                      <div
                        dir="auto"
                      >
                        RETRY
                      </div>
                    </Text>
                  </div>
                </View>
              </div>
            </View>
          </TouchableOpacity>
        </div>
      </View>
    </div>
  </View>
</AuthorProfileListError>
`;

exports[`AuthorList tests on web renders profile content component 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ woNlo"
  >
    <div
      data-testid="author-head"
    >
      <header
        className="responsive-styles__component-fbPFZZ eNPgyU"
        role="banner"
      >
        <div
          className="responsive-styles__component-fbPFZZ fRtPsM"
        />
        <h1
          aria-label="author-name"
          aria-level="1"
          className="responsive-styles__component-fbPFZZ dkRirA"
          data-testid="author-name"
          dir="auto"
          role="heading"
        >
          Deborah Haynes
        </h1>
        <h2
          aria-level="2"
          dir="auto"
          role="heading"
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
            }
          }
        >
          defence editor
        </h2>
        <div>
          <svg
            height={15}
            width={15}
          >
            <path
              fill="#006699"
            />
          </svg>
          <a
            dir="auto"
            href="https://twitter.com/jdoe"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="link"
          >
            @
            jdoe
          </a>
        </div>
        <div
          className="responsive-styles__component-fbPFZZ yjaCW"
        >
          <div
            data-testid="author-bio"
            dir="auto"
          >
            Deborah Haynes is the defence editor at 
            <em>
              The Times
            </em>
            , covering the most important defence & security news in the UK and around the world.
          </div>
        </div>
      </header>
    </div>
  </div>
  <div
    className="responsive-styles__component-fbPFZZ hkMMvo"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 0 - 0 of 0 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
        data-testid="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
        id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      >
        <a
          href="https://www.thetimes.co.uk/article/top-medal-for-forces-dog-who-took-a-bite-out-of-the-taliban-vgklxs37f"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="responsive-styles__component-fbPFZZ gBgAce"
          >
            <div
              className="responsive-styles__component-fbPFZZ woNlo"
            >
              <div>
                <div
                  className="authorProfileImage"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "display": "table",
                          "height": 0,
                          "overflow": "hidden",
                          "paddingBottom": "66.66666666666667%",
                        }
                      }
                    >
                      <img
                        alt=""
                        src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1b5afe88-cb0d-11e7-9ee9-e45ae7e1cdd4.jpg?crop=4252%2C2835%2C0%2C0&resize=100"
                        style={
                          Object {
                            "display": "block",
                            "position": "absolute",
                            "width": "100%",
                            "zIndex": 1,
                          }
                        }
                      />
                      <div>
                        <div
                          style={
                            Object {
                              "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="authorProfileContent"
                >
                  <div>
                    <h3
                      aria-level="3"
                      dir="auto"
                      role="heading"
                      style={
                        Object {
                          "fontSize": "22px",
                          "fontWeight": "400",
                          "lineHeight": "22px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Top medal for forces dog who took a bite out of the Taliban
                    </h3>
                    <div
                      dir="auto"
                      style={
                        Object {
                          "lineHeight": "20px",
                        }
                      }
                    >
                      <span
                        dir="auto"
                      >
                        
                        The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and
                        ...
                      </span>
                    </div>
                    <div
                      aria-label="datePublication"
                      data-testid="datePublication"
                      dir="auto"
                      style={
                        Object {
                          "lineHeight": "15px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Friday November 17 2017, 12:01am, The Times
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        accessibility-label="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
        data-testid="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
        id="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
      >
        <div />
        <a
          href="https://www.thetimes.co.uk/article/social-media-must-raise-game-to-beat-terrorists-says-un-chief-s5w8878f0"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="responsive-styles__component-fbPFZZ gBgAce"
          >
            <div
              className="responsive-styles__component-fbPFZZ woNlo"
            >
              <div>
                <div
                  className="authorProfileImage"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "display": "table",
                          "height": 0,
                          "overflow": "hidden",
                          "paddingBottom": "66.66666666666667%",
                        }
                      }
                    >
                      <img
                        alt=""
                        src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd1fe3000-cb0e-11e7-9ee9-e45ae7e1cdd4.jpg?crop=2887%2C1925%2C562%2C745&resize=100"
                        style={
                          Object {
                            "display": "block",
                            "position": "absolute",
                            "width": "100%",
                            "zIndex": 1,
                          }
                        }
                      />
                      <div>
                        <div
                          style={
                            Object {
                              "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="authorProfileContent"
                >
                  <div>
                    <h3
                      aria-level="3"
                      dir="auto"
                      role="heading"
                      style={
                        Object {
                          "fontSize": "22px",
                          "fontWeight": "400",
                          "lineHeight": "22px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Social media must raise game to beat terrorists, says UN chief
                    </h3>
                    <div
                      dir="auto"
                      style={
                        Object {
                          "lineHeight": "20px",
                        }
                      }
                    >
                      <span
                        dir="auto"
                      >
                        
                        The head of the United Nations has added his voice to calls for Facebook, YouTube, Microsoft and Twitter to help to stop the spread of terrorist
                        ...
                      </span>
                    </div>
                    <div
                      aria-label="datePublication"
                      data-testid="datePublication"
                      dir="auto"
                      style={
                        Object {
                          "lineHeight": "15px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Friday November 17 2017, 12:01am, The Times
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        accessibility-label="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
        data-testid="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
        id="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
      >
        <div />
        <a
          href="https://www.thetimes.co.uk/article/cuts-have-left-the-army-20-years-out-of-date-says-former-general-sir-richard-barrons-lg9txzbpn"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="responsive-styles__component-fbPFZZ gBgAce"
          >
            <div
              className="responsive-styles__component-fbPFZZ woNlo"
            >
              <div>
                <div
                  className="authorProfileImage"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "display": "table",
                          "height": 0,
                          "overflow": "hidden",
                          "paddingBottom": "66.66666666666667%",
                        }
                      }
                    >
                      <img
                        alt=""
                        src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F459f7782-c950-11e7-9ee9-e45ae7e1cdd4.jpg?crop=5448%2C3632%2C0%2C0&resize=100"
                        style={
                          Object {
                            "display": "block",
                            "position": "absolute",
                            "width": "100%",
                            "zIndex": 1,
                          }
                        }
                      />
                      <div>
                        <div
                          style={
                            Object {
                              "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="authorProfileContent"
                >
                  <div>
                    <h3
                      aria-level="3"
                      dir="auto"
                      role="heading"
                      style={
                        Object {
                          "fontSize": "22px",
                          "fontWeight": "400",
                          "lineHeight": "22px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Cuts have left the army 20 years out of date, says former general
                    </h3>
                    <div
                      dir="auto"
                      style={
                        Object {
                          "lineHeight": "20px",
                        }
                      }
                    >
                      <span
                        dir="auto"
                      >
                        
                        Britain’s cash-strapped army is 20 years out of date and would be incapable of surviving Russian artillery and air strikes in a conflict, a
                        ...
                      </span>
                    </div>
                    <div
                      aria-label="datePublication"
                      data-testid="datePublication"
                      dir="auto"
                      style={
                        Object {
                          "lineHeight": "15px",
                          "marginBottom": "5px",
                        }
                      }
                    >
                      Tuesday November 14 2017, 05:00pm, The Times
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthorList tests on web renders profile content empty 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ woNlo"
  >
    <div
      data-testid="author-head"
    >
      <header
        className="responsive-styles__component-fbPFZZ eNPgyU"
        role="banner"
      >
        <div
          className="responsive-styles__component-fbPFZZ fRtPsM"
        />
        <h1
          aria-label="author-name"
          aria-level="1"
          className="responsive-styles__component-fbPFZZ dkRirA"
          data-testid="author-name"
          dir="auto"
          role="heading"
        >
          
        </h1>
        <h2
          aria-level="2"
          dir="auto"
          role="heading"
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
            }
          }
        >
          
        </h2>
        <div
          className="responsive-styles__component-fbPFZZ yjaCW"
        >
          <div
            data-testid="author-bio"
            dir="auto"
          />
        </div>
      </header>
    </div>
  </div>
  <div
    className="responsive-styles__component-fbPFZZ hkMMvo"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 0 - 0 of 0 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
    <div />
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthorList tests on web renders profile content item component 1`] = `
<a
  href="https://www.thetimes.co.uk/article/top-medal-for-forces-dog-who-took-a-bite-out-of-the-taliban-vgklxs37f"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <div
    className="responsive-styles__component-fbPFZZ gBgAce"
  >
    <div
      className="responsive-styles__component-fbPFZZ woNlo"
    >
      <div>
        <div
          className="authorProfileContent"
        >
          <div
            className="responsive-styles__component-fbPFZZ dQznFS"
          >
            <div>
              <h3
                aria-level="3"
                dir="auto"
                role="heading"
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": "400",
                    "lineHeight": "22px",
                    "marginBottom": "5px",
                  }
                }
              >
                Top medal for forces dog who took a bite out of the Taliban
              </h3>
              <div
                aria-label="datePublication"
                data-testid="datePublication"
                dir="auto"
                style={
                  Object {
                    "lineHeight": "15px",
                    "marginBottom": "5px",
                  }
                }
              >
                Friday November 17 2017, 12:01am, The Times
              </div>
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ jwwxoJ"
          >
            <div>
              <h3
                aria-level="3"
                dir="auto"
                role="heading"
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": "400",
                    "lineHeight": "22px",
                    "marginBottom": "5px",
                  }
                }
              >
                Top medal for forces dog who took a bite out of the Taliban
              </h3>
              <div
                aria-label="datePublication"
                data-testid="datePublication"
                dir="auto"
                style={
                  Object {
                    "lineHeight": "15px",
                    "marginBottom": "5px",
                  }
                }
              >
                Friday November 17 2017, 12:01am, The Times
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`AuthorList tests on web renders profile content item component with a specific image size 1`] = `
<a
  href="https://www.thetimes.co.uk/article/top-medal-for-forces-dog-who-took-a-bite-out-of-the-taliban-vgklxs37f"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <div
    className="responsive-styles__component-fbPFZZ gBgAce"
  >
    <div
      className="responsive-styles__component-fbPFZZ woNlo"
    >
      <div>
        <div
          className="authorProfileContent"
        >
          <div
            className="responsive-styles__component-fbPFZZ dQznFS"
          >
            <div>
              <h3
                aria-level="3"
                dir="auto"
                role="heading"
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": "400",
                    "lineHeight": "22px",
                    "marginBottom": "5px",
                  }
                }
              >
                Top medal for forces dog who took a bite out of the Taliban
              </h3>
              <div
                aria-label="datePublication"
                data-testid="datePublication"
                dir="auto"
                style={
                  Object {
                    "lineHeight": "15px",
                    "marginBottom": "5px",
                  }
                }
              >
                Friday November 17 2017, 12:01am, The Times
              </div>
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ jwwxoJ"
          >
            <div>
              <h3
                aria-level="3"
                dir="auto"
                role="heading"
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": "400",
                    "lineHeight": "22px",
                    "marginBottom": "5px",
                  }
                }
              >
                Top medal for forces dog who took a bite out of the Taliban
              </h3>
              <div
                aria-label="datePublication"
                data-testid="datePublication"
                dir="auto"
                style={
                  Object {
                    "lineHeight": "15px",
                    "marginBottom": "5px",
                  }
                }
              >
                Friday November 17 2017, 12:01am, The Times
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`AuthorList tests on web renders profile content item component with no image 1`] = `
<a
  href="https://www.thetimes.co.uk/article/top-medal-for-forces-dog-who-took-a-bite-out-of-the-taliban-vgklxs37f"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <div
    className="responsive-styles__component-fbPFZZ gBgAce"
  >
    <div
      className="responsive-styles__component-fbPFZZ woNlo"
    >
      <div>
        <div
          className="authorProfileContent"
        >
          <div
            className="responsive-styles__component-fbPFZZ dQznFS"
          >
            <div>
              <h3
                aria-level="3"
                dir="auto"
                role="heading"
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": "400",
                    "lineHeight": "22px",
                    "marginBottom": "5px",
                  }
                }
              >
                Top medal for forces dog who took a bite out of the Taliban
              </h3>
              <div
                dir="auto"
                style={
                  Object {
                    "lineHeight": "20px",
                  }
                }
              >
                <span
                  dir="auto"
                >
                  
                  The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and
                  ...
                </span>
              </div>
              <div
                aria-label="datePublication"
                data-testid="datePublication"
                dir="auto"
                style={
                  Object {
                    "lineHeight": "15px",
                    "marginBottom": "5px",
                  }
                }
              >
                Friday November 17 2017, 12:01am, The Times
              </div>
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ jwwxoJ"
          >
            <div>
              <h3
                aria-level="3"
                dir="auto"
                role="heading"
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": "400",
                    "lineHeight": "22px",
                    "marginBottom": "5px",
                  }
                }
              >
                Top medal for forces dog who took a bite out of the Taliban
              </h3>
              <div
                dir="auto"
                style={
                  Object {
                    "lineHeight": "20px",
                  }
                }
              >
                <span
                  dir="auto"
                >
                  
                  The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and
                  ...
                </span>
              </div>
              <div
                aria-label="datePublication"
                data-testid="datePublication"
                dir="auto"
                style={
                  Object {
                    "lineHeight": "15px",
                    "marginBottom": "5px",
                  }
                }
              >
                Friday November 17 2017, 12:01am, The Times
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`AuthorList tests on web renders profile content loading 1`] = `
<div>
  <div>
    <div />
    <div>
      <div>
        <div
          style={
            Object {
              "backgroundImage": "linear-gradient(265deg, #F9F9F9 0%, #EDEDED 100%)",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="responsive-styles__component-fbPFZZ hkMMvo"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 0 - 0 of 0 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        accessibility-label="empty.0"
        data-testid="empty.0"
        id="empty.0"
      >
        <div
          className="responsive-styles__component-fbPFZZ gBgAce"
        >
          <div>
            <div
              className="authorProfileImage"
            >
              <div>
                <div
                  style={
                    Object {
                      "display": "table",
                      "height": 0,
                      "overflow": "hidden",
                      "paddingBottom": "66.66666666666667%",
                    }
                  }
                >
                  <img
                    alt=""
                    src=""
                    style={
                      Object {
                        "display": "block",
                        "position": "absolute",
                        "width": "100%",
                        "zIndex": 1,
                      }
                    }
                  />
                  <div>
                    <div
                      style={
                        Object {
                          "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="authorProfileContent"
            >
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
              <div
                style={
                  Object {
                    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthorList tests on web renders profile separator 1`] = `<div />`;

exports[`AuthorList tests on web renders with an intersection observer which uses the expected options 1`] = `
Object {
  "rootMargin": "50px",
  "threshold": 0.5,
}
`;
